--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,26 @@
-.cajaColor{
-    height: 150px;
-    width: 150px;
-    background-color: blue;
+body {
+  background-color: #85ffbd;
+  background-image: linear-gradient(45deg, #85ffbd 0%, #fffb7d 100%);
 }
 
-.contenedorFormulario{
-    box-shadow: 5px 5px 12px gray;
+.cajaColor {
+  height: 150px;
+  width: 150px;
+  background-color: blue;
 }
 
-.card{
-    max-width: 300px;
-    box-shadow: 5px 5px 12px gray;
+.contenedorFormulario {
+  box-shadow: 5px 5px 12px gray;
+  background: white;
 }
 
-.cajaColorCard{
-    height: 100px;
-    width: 100px;
-    background-color: yellow;
+.card {
+  max-width: 300px;
+  box-shadow: 5px 5px 12px gray;
+}
+
+.cajaColorCard {
+  height: 100px;
+  width: 100px;
+  background-color: black;
 }
