--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@ body {
 .cajaColor {
   height: 150px;
   width: 150px;
-  background-color: blue;
+  background-color: #fee140;
+  background-image: linear-gradient(90deg, #fee140 0%, #fa709a 100%);
 }
 
 .contenedorFormulario {
